[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "mixgram"
version = "0.1.0"
description = "Memória para sistemas de IA em vídeo baseado em pixéis para texto + incorporações. Guarde todas as suas informações num único vídeo MKV. Ideal para RAG."
readme = "README.md"
authors = [
    { name = "Luciano Salvino", email = "salvino.luciano@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "Pillow",
    "cryptography",
    "sentence-transformers",
    "opencv-python"
]

[project.scripts]
mixgram = "mixgram.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mixgram"]